feat: add span elements to rating paragraph elements and add bold styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
-.rateMyProfessor-ratings > p {
+.thehub > p {
   width : 90px !important;
+}
+
+.rateMyProfessor-rating {
+  font-weight: bold !important;
+}
+
+.rateMyProfessor-rating > span {
+  font-weight : normal !important;
 }
